--- a/css/rickandmorty.css
+++ b/css/rickandmorty.css
@@ -1,178 +1,284 @@
-body{
-    margin: 0;
-    padding: 10px;
-    background-color: #d7d7dacb;
-    width: 1500px;
-
-}
-
-/*HEADER*/
-header{
-    display: flex;
-    justify-content: space-around;
+body {
     background-color: #72C7D0;
-    /* border: solid red;   */
-    width: 100%;  
-
 }
-header p {
-    color: #233160;
-    font-size: 20px;
-    font-weight: 700;
-    line-height: 28px;
-    /* border: solid red;      */
 
-
-}
-.botonAbout{
-    background-color: #D7F2F2;
-    width: 132px;
-    height: 27px;
-    border-radius: 8px;
-    border: none;
-    margin-top: 12px;
-    /* border: solid red;      */
-
-
-}
-.botonAbout a{
-    color: #233160;
-    font-weight: 700;
-    font-size: 16px;
-    /* border: solid red;      */
-
-}
-/*SECTION*/
-article{
+.header {
     display: flex;
-    width: 100%;
-    background-color: #FFFFFF;
-    /* border: solid red;      */
-
+    justify-content: space-between;
+    /* border: 1px solid rgb(46, 9, 130); */
+    background-color: #72C7D0;
+    height: 90px;
 }
 
-.choose{
-    font-family: Inter;
-    font-size: 32px;
-    font-weight: 400;
-    line-height: 39px;
-    letter-spacing: 0em;
-    text-align: center;
-    color: #FFFFFF;
-    height: 127px;
-    width: 572px;
-    left: 510px;
-    top: 608px;
-    border-radius: nullpx;
-    /* border: solid red;   */
-    margin-left: auto;
-    margin-right: auto;   
-
-
-
-
-}
-/*BARRA DE NAVEGACION*/
-.navbar{
-    margin-left: auto;
-    margin-right: auto;
-    /* border: solid red;   */
-    background-color: #96C96A;
-    width: 1500px;
-
-
-}
-nav{
-    width: 700px;
-    height: 50px;
-    padding: 32px;
-    align-content: center;  
-    /* border: solid red;   */
-    margin-left: 400px;
-    
-      
-   
-}
-nav a{
-    color:  #D5FAB6;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 28px;
-    margin: 24px;
-    /* border: solid red;      */
-
-    
-}
-nav a:hover{
-    color: #FFFFFF;
-    /* border: solid red;      */
-
-}
-
-section{
-    background-color:  #72C7D0;
-    width: 100%;
-    /* border: solid red;    */
-    display: grid;  
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 1px;
-    
-       
-}
-.img-container{
-    width: 250px;
-    height: 246px;
-    left: 18px;
-    top: 55px;
-    border-radius: 20px;
-}
-.img-container img{
-    width: 100%;
-}
-.article {
-   
-    width: 287px;
-    height: 510px;
-    left: 72px;
-    top: 580px;
-    padding: 10px;
-    display: initial;
-    background: #D7F2F2;
-    border-radius: 20px;
-   
-}
-.nombrePersonaje{
-    width: 322px;
-    height: 27px;
-    margin-left: -15px;
-    
+#parrafoheader {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
-    font-size: 24px;
-    text-align: center;
-
+    font-size: 25px;
+    letter-spacing: 0.03em;
     color: #233160;
+    padding: 5px 20px;
 }
-.gender {
-    width: 60px;
-    height: 25px;
-    color: #FFFFFF;
-    margin-right: auto;
-    margin-left: auto;
-    background: #96C96A;
-    border-radius: 10px;
+
+#botonabout {
+    margin: 18px;
+    margin-right: 70px;
+    font-weight: bold;
+    border-radius: 20px;
+    border-style: none;
+    width: 150px;
+    height: 40px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-size: 20px;
     text-align: center;
-    
+    letter-spacing: 0.03em;
+    color: #233160;
+    background-color: #D7F2F2;
+    cursor: pointer;
 }
-.status {
-    font-family: Roboto;
-    font-size: 16px;
+
+.div-uno {
+    display: flex;
+    flex-direction: row;
+    background-color: white;
+}
+
+#tituloprincipal {
+    position: relative;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 35px;
+    letter-spacing: 0.01em;
+    color: #233160;
+    padding: auto;
+}
+
+#parraforickmorty{
+    position: relative;
+    font-family: 'Roboto';
+    font-style: normal;
     font-weight: 400;
-    line-height: 22px;
-    letter-spacing: 0em;
-    text-align: center;
+    font-size: 25px;
     color: #233160;
+    padding: auto;
+}
+
+.div-dos {
+    display: flex;
+    justify-content: space-between;
+    background-color: #96C96A;
+    /* border: 1px solid red; */
+}
+
+#listahorizontal {
+    display: flex;
+    font-size: 22px;
+    cursor: pointer;
+    height: 50px;
+}
+
+.listadeitems{
+    display: inline;
+    list-style-type: none;
+    margin: 10px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 23px;
+    line-height: 133%;
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
+    padding: 0px 80px;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+a:visited,
+a:link {
+    color: white;
+}
+
+#aButton {
+    color: #233160;
+}
+
+#aButton:visited,
+#aButton:link {
+    color: #233160;
+}
+
+.div3 {
+    background-color: #72C7D0;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 39px;
+    text-align: center;
+    color: #FFFFFF;
+    height: 180px;
+    padding: auto;
+    position: relative;
+    text-align: center;
+}
+
+/* footer */
+footer {
+    display: flex;
+    background-color: #96C96A;
+    text-align: center;
+    justify-content: space-between;
+}
+
+footer div ul {
+    flex-direction: column;
+}
+
+footer li {
+    margin: 2px;
+    cursor: pointer;
+}
+
+.listafooter {
+    display: flex;
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 19px;
+    line-height: 36px;
+    padding-left: 0px;
+    margin-left: 0%;
+}
+
+#nombre-blanco {
+    color: white;
+    display: flex;
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: bold;
+    font-size: 32px;
+    line-height: 100%;
+    padding-bottom: 20px;
+}
+
+#letraBlanca {
+    color: white;
+    font-family: "Poppins";
+    font-size: 19px;
+}
+
+.titulosfooter {
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 32px;
+    padding-left: 35px;
+    color: white;
+}
+
+.hireme {
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 32px;
+    padding-right: 400px;
+    margin-right: 100px;
+}
+
+/* cuadros */
 
 
+.mainprincipal {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 18px;
+    height: auto;
+    margin: 1%;
+}
+
+.mainsecundario {
+    padding: 25px 150px;
+    color: white;
+    text-align: center;
+    font-family: 'Roboto';
+    font-weight:bold;
+    font-size: 20px;
+    letter-spacing: 0.03em;
+}
+
+.card {
+    background-color: #D7F2F2;
+    width: 250px;
+    height: 350px;
+    border-radius: 5%;
+}
+.image-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 5%;
+}
+
+.card-body-p {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight:bold;
+    font-size: 20px;
+    letter-spacing: 0.03em;
+    color: #233160;
+}
+
+.card-body-img {
+    border: 5px solid white;
+    border-radius: 5%;
+    background-color: white;
+    height: 100px;
+    width: 100px;
+    padding: 3%;
+    margin: 3%;
+}
+
+.generos {
+    background-color: #96C96A;
+    color: white;
+    border-radius: 10%;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight:bold;
+    font-size: 20px;
+    letter-spacing: 0.03em;
+    width: 80px;
+    height: 30px;
+    text-align: center;
+}
+
+.card-body-status {
+    color: #233160;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-size: 15px;
+    letter-spacing: 0.03em;
+    width: 80px;
+    height: 5px;
+    text-align: center;
+    margin: 5%;
+}
+
+.card-body-species {
+    color: #233160;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-size: 15px;
+    letter-spacing: 0.03em;
+    width: 80px;
+    height: 5px;
+    text-align: center;
+    margin: 5%;
 }
