--- a/css/about.css
+++ b/css/about.css
@@ -21,11 +21,7 @@ button{
     justify-content: center;
     margin-top: 12px;
 }
-#Amarillo {
-    color: #FFB742;
-    text-decoration: underline;
-    display: inline;
-    }
+
 ul {
     display: flex;
     list-style: none;
@@ -78,13 +74,29 @@ section{
     color: #d4d4d4;
     width: 700px;
 }
+.hire-me{
+        background-color: #FFB742;
+        border-radius: 50px;
+        height: 54px;
+        width: 121px;
+        padding: 5px;
+        border-style: none;
+        font-weight: bold;
+        justify-content: center;
+        margin-top: 12px;
+}
 
 /* Footer*/
 
 footer {
-   
     display: flex;
     justify-content: space-between;
+    position: absolute;
+    width: 1440px;
+    height: 470px;
+    left: 4px;
+    top: 926px;
+    background-color: #0b0d0f;
 }
 a:hover {
     color: #FFB742;
