--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;400;500;600;700&family=Poppins:wght@100;200;400;500;600;700&family=Work+Sans:wght@500;700&display=swap');
 * {
-    margin: 0px;
+    margin: 8px;
     padding: 8px;
+
 }
 body {
     font-family: 'Poppins', sans-serif;
@@ -10,7 +11,7 @@ body {
     width: 1440px;
     
     }
-button{
+#changemode{
     background-color: #FFB742;
     border-radius: 50px;
     height: 54px;
