--- a/css/contact.css
+++ b/css/contact.css
@@ -21,6 +21,17 @@ button{
     justify-content: center;
     margin-top: 12px;
 }
+#changemode{
+    background-color: #FFB742;
+    border-radius: 50px;
+    height: 54px;
+    width: 121px;
+    padding: 5px;
+    border-style: none;
+    font-weight: bold;
+    justify-content: center;
+    margin-top: 12px;
+}
 #Amarillo {
     color: #FFB742;
     text-decoration: underline;
