--- a/css/contact.css
+++ b/css/contact.css
@@ -2,15 +2,16 @@
 * {
     margin: 0px;
     padding: 8px;
+
 }
-body {
+.body {
     font-family: 'Poppins', sans-serif;
     background: #212529;
-    color: #FFFFFF;
     width: 1440px;
     
     }
-button{
+        
+ #changemode{
     background-color: #FFB742;
     border-radius: 50px;
     height: 54px;
@@ -21,17 +22,7 @@ button{
     justify-content: center;
     margin-top: 12px;
 }
-#changemode{
-    background-color: #FFB742;
-    border-radius: 50px;
-    height: 54px;
-    width: 121px;
-    padding: 5px;
-    border-style: none;
-    font-weight: bold;
-    justify-content: center;
-    margin-top: 12px;
-}
+
 #Amarillo {
     color: #FFB742;
     text-decoration: underline;
@@ -41,11 +32,16 @@ ul {
     display: flex;
     list-style: none;
     justify-content: space-between;
-    }
+}
 header {
     font-family: 'Poppins', sans-serif;
     display: flex;
     justify-content: space-between;
+}
+.nav1{
+    color: #FFFFFF;
+    text-decoration: none;
+    font-family: 'Poppins',sans-serif;
 }
 
 /*jokes*/
@@ -75,11 +71,11 @@ header {
     font-family: sans-serif;
     font-size: 40px;
     font-weight: 700;
+    color: #FFFFFF;
     }
 .jokesbox {
     
     background-color: #FFFFFF;
-    color: #0b0d0f;
     width: 300px;
     height: auto;
     align-items: center;
@@ -87,9 +83,11 @@ header {
     border-radius: 8px;   
     margin-left: 550px;
 }
-.textjokes{
-    font-size: 12px;
+.text {
+    color: #0b0d0f;
+    font-size: 15px;
 }
+
 #onemore{
     background-color: #FFB742;
         border-radius: 50px;
@@ -106,8 +104,8 @@ header {
 /*contact*/
 
 .sectioncontact{
-    padding: 12px;
-    height: 600px;
+    padding: 0px;
+    height: 0px;
 }
 
 .contactme{
@@ -122,7 +120,7 @@ header {
     margin-left: 640px;
 }
 .cajacontact{
-    display: flex;
+    display: flexbox;
     justify-content: center;
 }
 .cajacontact img{
@@ -135,26 +133,25 @@ header {
     color: #0b0d0f;
     font-size: larger;
  }
+ .datoscontacto {
+    display: flex;
+    flex-direction: column;
+    margin-left: 300px;
+    margin-right: auto;
+    margin-top:16px;
+  }
 
-
- .infocontacto{
+ .input{
     display: flex;
     border-radius: 12px;
     height: 30px;
     width: 300px;
-    color:#FFFFFF;
     margin-left: 250px;
     background-color: #292B2E;
     justify-content: space-between;
 
 }
-.datoscontacto {
-    width: 784px;
-    height: 350px;
-    justify-content:center;
-    font-size: 32px;
-    line-height: 100px;
-  }
+
 .buttonsend{
     height: 54px;
     width: 99px;
@@ -163,133 +160,114 @@ header {
     border-radius: 50px;
     padding: 12px 26px 12px 26px;
     margin-left: 350px;
+    background-color: #FFB742;
     
     }
     
 
 /* Footer*/
 footer {
-display: flex;
-justify-content: space-between;
-position: absolute;
-width: 1440px;
-height: 470px;
-left: 4px;
-top: 926px;
-background-color: #0b0d0f;
-    }
-a:hover {
-    color: #FFB742;
-}
-a {
-    color: #FFFFFF;
-    text-decoration: none;
-}
-
-footer div li {
-    display: block;
-    list-style: none;
-    justify-content: space-between;
-}
-.box-dos p:nth-child(1) {
-    font-style: 'Poppins';
-    font-weight: 700;
-    font-size: 32px;
-    color: #FFB742;
-}
-.box-dos p:nth-child(2) {
-    font-style: 'Work Sans';
-    font-weight: 600;
-    font-size: 16px;
-}
-.box-tres p{
-    font-style: 'Work Sans';
-    font-weight: 700;
-    font-size: 20px;
-}
-.box-tres li{
-    font-style: 'Work Sans';
-    font-weight: 500;
-    font-size: 16px;
-    display: grid;
-   }
-.box-tres a{
-    color: #7B7B7B;
-    line-height: 16px;
-   }
-.box-tres li a:hover{
-    color: #FFB742;
-    }
-.box-tres p:nth-child(1) {
-    font-style: 'Work Sans';
-    font-weight: 600;
-    font-size: 16px;
-    }
-.box-tres p:nth-child(2) {
-    font-style: 'Work Sans';
-    font-weight: 600;
-    font-size: 16px;
-    color: #7B7B7B;
-    }
-.send-email{
-    position: absolute;
-    border-radius: 32px;
-    height: 28px;
-    width: 28px;
-    background-color: #FFB742;
-    margin-top: 8px;
-    margin-left: 16px;
-    }
-.send-email img{
-    position: absolute;
-    margin-top: -6px;
-    margin-left: -7px;
-}
-.write-email{
-    border-radius: 49px;
-    color: #7B7B7B;
-    background-color: #0b0d0f;
-    border-style: none;
-    margin-top: 16px;
-}
-
-/*light mode style*/ 
-.bodychange-mode {
-    padding: 10px;
-    background-color: white;
-    font-family: "Poppins";
-    color: black;
-    justify-content: center;
- }
- .jokesboxchange-mode{
-    
-    background-color:#212529;
-    color:white;
-    width: 300px;
-    height: auto;
-    align-items: center;
-    height: 200px;
-    border-radius: 8px;   
-    margin-left: 550px;
-}
- .infocontactochange-mode{
     display: flex;
-    border-radius: 12px;
-    height: 30px;
-    width: 300px;
-    color:black;
-    margin-left: 250px;
-    background-color: #FFFFFF;
     justify-content: space-between;
-
-}
-.contactsmilechange-mode {
-    margin-left: 496px;
-    padding: 24px;
-    width: 494px;
-    height: 49px;
-    font-family: sans-serif;
-    font-size: 40px;
-    font-weight: 700;
-    color: #0b0d0f;
+    position: absolute;
+    width: 1440px;
+    height: 470px;
+    left: 4px;
+    top: 926px;
+    background-color: #0b0d0f;
     }
+    a:hover {
+        color: #FFB742;
+    }
+    .nav{
+        color: #FFFFFF;
+        text-decoration: none;
+    }
+    .textos{
+        color:#FFFFFF
+    }
+    footer div li {
+        display: block;
+        list-style: none;
+        justify-content: space-between;
+    }
+    .box-dos p:nth-child(1) {
+        font-style: 'Poppins';
+        font-weight: 700;
+        font-size: 32px;
+        color: #FFB742;
+    }
+    .box-dos p:nth-child(2) {
+        font-style: 'Work Sans';
+        font-weight: 600;
+        font-size: 16px;
+    }
+    .box-tres p{
+        font-style: 'Work Sans';
+        font-weight: 700;
+        font-size: 20px;
+    }
+    .box-tres li{
+        font-style: 'Work Sans';
+        font-weight: 500;
+        font-size: 16px;
+        display: grid;
+       }
+    .box-tres a{
+        color: #7B7B7B;
+        line-height: 16px;
+       }
+    .box-tres li a:hover{
+        color: #FFB742;
+        }
+    .box-tres p:nth-child(1) {
+        font-style: 'Work Sans';
+        font-weight: 600;
+        font-size: 16px;
+        }
+    .box-tres p:nth-child(2) {
+        font-style: 'Work Sans';
+        font-weight: 600;
+        font-size: 16px;
+        color: #7B7B7B;
+        }
+    .send-email{
+        position: absolute;
+        border-radius: 32px;
+        height: 28px;
+        width: 28px;
+        background-color: #FFB742;
+        margin-top: 8px;
+        margin-left: 16px;
+        }
+    .send-email img{
+        position: absolute;
+        margin-top: -6px;
+        margin-left: -7px;
+    }
+    .write-email{
+        border-radius: 49px;
+        color: #7B7B7B;
+        background-color: #0b0d0f;
+        border-style: none;
+        margin-top: 16px;
+    } 
+    /*light mode*/
+    .cambiarmodo{
+        background-color: #FFFFFF;
+    }
+    .navnegro{
+        color: #0b0d0f;
+    }
+    .readjokeblack{
+        color: #0b0d0f;
+    }
+    .jokesboxblack{
+        background-color:  #0b0d0f;
+    }
+  .textwhite{
+    color: #FFFFFF;
+  }
+  .inputwhite{
+    background-color: #FFFFFF;
+  }
